			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard
			
29-Jul-2005
~~~~~~~~~~~
Added option to only show iconified windows belonging to the current workspace
(Tom Morton).
Added option to allow vertical ordering when laying out the icon view 
(Piotr Zielinski).

28-Jul-2005
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

27-Jul-2005
~~~~~~~~~~~
Renamed Python MIME icon to keep up with freedesktop.org's current thinking in
the endless text vs application war (Thomas Leonard).

26-Jul-2005
~~~~~~~~~~~
Removed custom platform detection (which was designed to allow a single
copy of ROX-Filer to contain binaries for multiple platforms). Let the
packaging system deal with it (Thomas Leonard).

25-Jul-2005
~~~~~~~~~~~
Check for shared-mime-info 0.16 when building (Stephen Watson).

24-Jul-2005
~~~~~~~~~~~
An executable text file of unknown type is marked as executable if its name
doesn't contain a '.'. This is so that 'readme.txt' on a filesystem with
all execute bits set is seen as text, but a shell script with no extension
or interpreter header still shows up as an executable on Solaris (Thomas
Leonard; requested by Stephen Watson).

23-Jul-2005
~~~~~~~~~~~
Added icon for messages (Thomas Leonard).
Improvements for file type guessing (Thomas Leonard):
- When getting the type for a symlink, we need the absolute path now that we
  check file contents.
- Also check for extended attributes for the symlink target.
- Removed all of our code for guessing types from file names, since it
  duplicates the new xdgmime code.
- Files with control characters are now considered to be binary, even
  though they may be valid UTF-8.
- Executable files of unknown type are now marked as executable, not
  octet-stream.
- When complaining that there is no run action for an executable type,
  give the user a hint about setting the execute permission.
- Refreshing the MIME system also refreshes xdgmime.